@@ -131,7 +131,7 @@ LOCAL void tls_key_usage (MolochCertsInfo_t *certs, BSB *bsb)
     }
 }
 /******************************************************************************/
-LOCAL void tls_alt_names(MolochCertsInfo_t *certs, BSB *bsb, char *lastOid)
+LOCAL void tls_alt_names(MolochSession_t *session, MolochCertsInfo_t *certs, BSB *bsb, char *lastOid)
 {
     uint32_t apc, atag, alen;
 
@@ -144,7 +144,7 @@ LOCAL void tls_alt_names(MolochCertsInfo_t *certs, BSB *bsb, char *lastOid)
         if (apc) {
             BSB tbsb;
             BSB_INIT(tbsb, value, alen);
-            tls_alt_names(certs, &tbsb, lastOid);
+            tls_alt_names(session, certs, &tbsb, lastOid);
             if (certs->alt.s_count > 0) {
                 return;
             }
@@ -158,14 +158,19 @@ LOCAL void tls_alt_names(MolochCertsInfo_t *certs, BSB *bsb, char *lastOid)
         } else if (lastOid[0] && atag == 4) {
             BSB tbsb;
             BSB_INIT(tbsb, value, alen);
-            tls_alt_names(certs, &tbsb, lastOid);
+            tls_alt_names(session, certs, &tbsb, lastOid);
             return;
         } else if (lastOid[0] && atag == 2) {
             MolochString_t *element = MOLOCH_TYPE_ALLOC0(MolochString_t);
-            element->str = g_ascii_strdown((char*)value, alen);
-            element->len = alen;
-            element->utf8 = 1;
-            DLL_PUSH_TAIL(s_, &certs->alt, element);
+
+            if (g_utf8_validate((char *)value, alen, NULL)) {
+                element->str = g_ascii_strdown((char *)value, alen);
+                element->len = alen;
+                element->utf8 = 1;
+                DLL_PUSH_TAIL(s_, &certs->alt, element);
+            } else {
+                moloch_session_add_tag(session, "bad-altname");
+            }
         }
     }
     lastOid[0] = 0;
@@ -440,7 +445,7 @@ LOCAL void tls_process_server_certificate(MolochSession_t *session, const unsign
             BSB_INIT(tbsb, value, alen);
             char lastOid[100];
             lastOid[0] = 0;
-            tls_alt_names(certs, &tbsb, lastOid);
+            tls_alt_names(session, certs, &tbsb, lastOid);
         }
 
         // no previous certs AND not a CA AND either no orgName or the same orgName AND the same 1 commonName
