@@ -22,10 +22,12 @@ NOTICE: Restart wiseService before capture when upgrading
   - release - node 10.21.0
   - capture - minor tcp dns parsing performance improvement
   - capture - refactor some code to be more type safe
+  - capture - deal with bad utf8/puny in dns and altnames
   - viewer - warn at starting about missing ./vueapp/dist/index.html
   - viewer - can now use db:<dbFieldName> in expressions (PR #1463)
   - viewer - if esAdminUsers isn't set, ES Admin tab now shows up for admins
   - viewer - ES Nodes can display molochzone attribute now
+  - viewer - fixed some Users tab issues
 
 2.3.1 2020/05/27
   - all - Lots of changes to support node 12 in the future (thanks rnbwdsh)
